=================
Changes for Crate
=================

Unreleased
==========

 - Fix: Using CLUSTERED BY Column in PARTITIONED BY clause threw
   misleading exception

 - Fix: Inserting arrays with a null value at first position
   failed

 - Fix: Nested Columns of ignored objects where exported
   as `null` values when using COPY TO

 - improved speed of bulk inserts in partitioned tables to avoid request
   timeouts

 - Fix: The clustered-by columns could be updated if they were nested.

 - Fix: Fixed an edge case where group by queries on system tables or
   grouping on primary key or routing column and using limit or selecting
   the same aggregation twice did not execute correctly.

 - Fixed possible race condition that could cause the `LIMIT` to not be applied
   correctly.

 - Fixed NPE which could occure on a shard failure while collecting
   distributed (e.g. group by query)

 - Fix: correctly validate array values in INSERT and UPDATE statements

 - Fix: NULL element in array in first element of bulk insert threw NPE

 - Fix: array columns that were nested inside multiple objects had
   incorrect data type (type of their elements instead of array type)

 - Fix: adding column on partitioned table without partitions threw exception
   although column was added to schema

2014/11/18 0.45.5
=================

 - Updated crate-admin to version 0.10.2 which includes following changes:

    - fixed issue that caused clunky scrolling with trackpad
      in Safari that mainly occured when having a narrow browser width

    - made console placeholder text darker so you can distinguish better
      between placeholder text and actually written statement

    - fixed 'Execute Query' button in console view

 - Fix: correctly handle empty values and values containing commas
   for clustered by columns in the where clause. e.g: ``where _id=''``

 - Fix: Forbid using ``alter table add column`` on a single partition.
