@@ -1,9 +1,34 @@
+# Crate uses log4j as internal logging abstraction.
+# Configure log4j as you need it to behave by setting the log4j prefixes in
+# this file.
+
+# Specify the log level and its appender for each logger as follows.
+# The appenders can be configured further down below.
 rootLogger: INFO, console, file
 
 logger:
-  # log action execution errors for easier debugging
+#  Log action execution errors for easier debugging
   action: DEBUG
 
+#  Peer shard recovery
+# indices.recovery: DEBUG
+
+#  Discovery
+#  Crate will discover the other nodes within its own cluster.
+#  If you want to log the discovery process, set the following:
+# discovery: TRACE
+
+#  If searching or indexing starts to slow down, you may want to log that as
+#  well. Here are two prepared examples for such use cases:
+# index.search.slowlog: TRACE, table_search_slow_log_file
+# index.indexing.slowlog: TRACE, table_indexing_slow_log_file
+
+# Define your appenders here.
+# Like mentioned above, use the log4j prefixes to configure for example the
+# type or layout.
+# For all available settings, take a look at the log4j documentation.
+# http://logging.apache.org/log4j/2.x/
+# http://logging.apache.org/log4j/2.x/manual/appenders.html
 appender:
   console:
     type: console
@@ -18,3 +43,24 @@ appender:
     layout:
       type: pattern
       conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
+
+#  table_search_slow_log_file:
+#    type: dailyRollingFile
+#    file: ${path.logs}/${cluster.name}_table_search_slowlog.log
+#    datePattern: "'.'yyyy-MM-dd"
+
+#     if you want to keep the logs for a certain time range only,
+#     set the following value to fit your needs (or remove it if you don't
+#     need it at all).
+#    maxBackupIndex: 7
+#    layout:
+#      type: pattern
+#      conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
+
+#  table_indexing_slow_log_file:
+#    type: dailyRollingFile
+#    file: ${path.logs}/${cluster.name}_table_indexing_slowlog.log
+#    datePattern: "'.'yyyy-MM-dd"
+#    layout:
+#      type: pattern
+#      conversionPattern: "[%d{ISO8601}][%-5p][%-25c] %m%n"
